--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -43,10 +43,11 @@
 @font-face {
     font-family: 'Noto Sans KR';
     font-weight: 300;
-    src: url('/fonts/NotoSansKR-Light.otf') format('woff2'),
-        url('/fonts/NotoSansKR-Light.otf') format('woff'),
-        url('/fonts/NotoSansKR-Light.otf') format('truetype');
+    src: url("/fonts/NotoSansKR-Light.otf") format('woff2'),
+        url("/fonts/NotoSansKR-Light.otf") format('woff'),
+        url("/fonts/NotoSansKR-Light.otf") format('truetype');
 }
+
 
 @font-face {
     font-family: 'Noto Sans KR';
